[package]
name = "psyche-decentralized-testing"
edition = "2021"
version.workspace = true

[dependencies]
psyche-solana-coordinator.workspace = true
psyche-coordinator.workspace = true
anchor-client.workspace = true
psyche-core.workspace = true
tokio-util.workspace = true
tokio.workspace = true
bollard = "0.18.1"
serde_json.workspace = true
futures-util.workspace = true
thiserror.workspace = true

[dev-dependencies]
test-log.workspace = true
serial_test.workspace = true
rstest.workspace = true
