[package]
name = "expand-distro"
version.workspace = true
edition = "2021"

[dependencies]
psyche-client.workspace = true
psyche-modeling.workspace = true
psyche-network.workspace = true
anyhow.workspace = true
postcard.workspace = true
tch.workspace = true
clap.workspace = true
clap-markdown.workspace = true
