[package]
name = "psyche-solana-coordinator"
version = "0.1.0"
description = "Nous Research - Psyche Solana Coordinator"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "psyche_solana_coordinator"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "a7a23eea308440a9fa9cb79cee7bddd30ab163d5" }
bytemuck = { version = "1", features = [
  "derive",
  "min_const_generics",
  "extern_crate_std",
] }
psyche-core = { path = "../../../../../shared/core" }
psyche-coordinator = { path = "../../../../../shared/coordinator" }
serde = { version = "1.0.209", features = ["derive"] }
psyche-solana-authorizer = { path = "../../../solana-authorizer/programs/solana-authorizer", features = [
  "cpi",
] }
ts-rs = { git = "https://github.com/arilotter/ts-rs.git", rev = "7a2d7840f628763fc9fa549b19dc2cb8eb7cebd5", features = [
  "psyche-impl",
] }

[dev-dependencies]
solana-sdk = "=2.1.4"
solana_toolbox_endpoint = "=0.1.38-solana-2.1.4"
tokio = "1.42.0"
