[package]
name = "psyche-solana-mining-pool"
version = "0.1.1"
description = "Nous Research - Psyche Solana Mining Pool"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "psyche_solana_mining_pool"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "=0.30.1"
anchor-spl = "=0.30.1"

[dev-dependencies]
solana-sdk = "=1.18.26"
solana_toolbox_endpoint = "=0.1.38-solana-1.18.26"
solana_toolbox_anchor = "=0.1.38-solana-1.18.26-anchor-0.30.1"
tokio = "1.42.0"
