[package]
name = "psyche-solana-treasurer"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "psyche_solana_treasurer"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "a7a23eea308440a9fa9cb79cee7bddd30ab163d5" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git", rev = "a7a23eea308440a9fa9cb79cee7bddd30ab163d5" }
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
psyche-solana-coordinator = { path = "../../../solana-coordinator/programs/solana-coordinator", features = [
  "cpi",
] }
serde = { version = "1.0.209", features = ["derive"] }

[dev-dependencies]
solana-sdk = "=2.1.4"
solana_toolbox_endpoint = "=0.1.30-solana-2.1.4"
tokio = "1.42.0"

psyche-core = { path = "../../../../../shared/core" }
psyche-coordinator = { path = "../../../../../shared/coordinator" }
