[package]
name = "psyche-solana-treasurer"
version = "0.1.0"
description = "Nous Research - Psyche Solana Treasurer"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "psyche_solana_treasurer"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "a7a23eea308440a9fa9cb79cee7bddd30ab163d5" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git", rev = "a7a23eea308440a9fa9cb79cee7bddd30ab163d5" }
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
psyche-core = { path = "../../../../../shared/core" }
psyche-coordinator = { path = "../../../../../shared/coordinator" }
psyche-solana-coordinator = { path = "../../../solana-coordinator/programs/solana-coordinator", features = [
  "cpi",
] }
psyche-solana-authorizer = { path = "../../../solana-authorizer/programs/solana-authorizer", features = [
  "cpi",
] }
serde = { version = "1.0.209", features = ["derive"] }
